default/objects/Incoming_Integrated_Object_Field__mdt/Incoming_Integrated_Object_Field__mdt.object-meta.xml
<CustomObject>
    <description>Fields that should receive special values during integration</description>
    <label>Incoming Integrated Object Field</label>
    <pluralLabel>Incoming Integrated Object Fields</pluralLabel>
</CustomObject>