default/objects/Incoming_Integrated_Object_Field__mdt/fields/Conditional_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Conditional_Field_Name__c</fullName>
    <inlineHelpText>If set, only set the field value if this conditional field evaluates to true.</inlineHelpText>
    <label>Conditional Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>