default/objects/Incoming_Integrated_Object_Field__mdt/fields/Decimal_Digits__c.field-meta.xml
<CustomField>
    <fullName>Decimal_Digits__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Enter the number of decimal digits the Number should have in Salesforce</inlineHelpText>
    <label>Decimal Digits</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>