default/objects/Incoming_Integrated_Object_Field__mdt/fields/Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Field_Value__c</fullName>
    <inlineHelpText>If a Picklist or text value, enter the text to be set in the value.  If a Date, enter the integer number of dates to be added to the current date.</inlineHelpText>
    <label>Field Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>