default/objects/Incoming_Integrated_Object_Field__mdt/fields/Incoming_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Incoming_Field_Name__c</fullName>
    <inlineHelpText>What is the field name in the JSON where the data is found.</inlineHelpText>
    <label>Incoming Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>