default/objects/Incoming_Integrated_Object_Field__mdt/fields/Incoming_Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Incoming_Field_Type__c</fullName>
    <label>Incoming Field Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>String</fullName>
                <default>true</default>
                <label>String</label>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Boolean</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>StringToNumber</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>