default/objects/Incoming_Integrated_Object_Field__mdt/fields/Incoming_Integration_Object__c.field-meta.xml
<CustomField>
    <fullName>Incoming_Integration_Object__c</fullName>
    <label>Incoming Integration Object</label>
    <referenceTo>Incoming_Integrated_Object__mdt</referenceTo>
    <relationshipLabel>Incoming Integrated Object Fields</relationshipLabel>
    <relationshipName>Incoming_Integrated_Object_Fields</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>