default/objects/Incoming_Integrated_Object_Field__mdt/fields/Incoming_Object_Level_1__c.field-meta.xml
<CustomField>
    <fullName>Incoming_Object_Level_1__c</fullName>
    <inlineHelpText>If the field value is within an object in the response, was is the highest level object name</inlineHelpText>
    <label>Incoming Object Level 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>