default/objects/Incoming_Integrated_Object_Field__mdt/fields/Incoming_Object_Level_2__c.field-meta.xml
<CustomField>
    <fullName>Incoming_Object_Level_2__c</fullName>
    <inlineHelpText>If the field value is within an object in the response, was is the second level object name</inlineHelpText>
    <label>Incoming Object Level 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>