default/objects/Incoming_Integrated_Object_Field__mdt/fields/Level_1_Is_List__c.field-meta.xml
<CustomField>
    <fullName>Level_1_Is_List__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If the Configured item is a list, the first element will be retrieved.</inlineHelpText>
    <label>Level 1 Is List</label>
    <type>Checkbox</type>
</CustomField>