default/objects/Incoming_Integrated_Object_Field__mdt/fields/Level_1_Match_Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Level_1_Match_Field_Value__c</fullName>
    <inlineHelpText>When Object is a list, enter the JSON field value that should be used to find in the records of the list to match the record to convert</inlineHelpText>
    <label>Level 1 Match Field Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>