default/objects/Incoming_Integrated_Object_Field__mdt/fields/Level_2_Is_List__c.field-meta.xml
<CustomField>
    <fullName>Level_2_Is_List__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If the Configured item is a list, the second element will be retrieved.</inlineHelpText>
    <label>Level 2 Is List</label>
    <type>Checkbox</type>
</CustomField>