default/objects/Incoming_Integrated_Object_Field__mdt/fields/Level_2_Use_First_Item__c.field-meta.xml
<CustomField>
    <fullName>Level_2_Use_First_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Mark this if the JSON is a list but you expect only 1 element and that element will be used.</inlineHelpText>
    <label>Level 2 Use First Item</label>
    <type>Checkbox</type>
</CustomField>