default/objects/Incoming_Integrated_Object_Field__mdt/fields/Map_to_Original_Object__c.field-meta.xml
<CustomField>
    <fullName>Map_to_Original_Object__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Map to Original Object</label>
    <type>Checkbox</type>
</CustomField>