default/objects/Incoming_Integrated_Object_Field__mdt/fields/Original_Object_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Original_Object_Field_Name__c</fullName>
    <label>Original Object Field Name</label>
    <length>96</length>
    <type>Text</type>
</CustomField>