default/objects/Incoming_Integrated_Object_Field__mdt/fields/Original_Object_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Original_Object_Relationship__c</fullName>
    <label>Original Object Relationship</label>
    <length>48</length>
    <type>Text</type>
</CustomField>